# ma-target-discovery

./: .gitignore  README.md  criteria.json  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  __main__.py  config.py
app/api/: __init__.py  main.py  routes.py
app/connectors/: __init__.py  base.py  mock.py  opencorporates.py  web_search.py
app/crawler/: __init__.py  extractor.py  fetcher.py  robots.py
app/enrich/: __init__.py  classifier.py  dedupe.py  llm_parser.py  parser.py
app/models/: __init__.py  candidate.py  criteria.py  database.py
app/score/: __init__.py  evidence.py  filters.py  scorer.py
app/ui/static/: app.js  index.html
data/: ranked_targets.csv
tests/: __init__.py  test_dedupe.py  test_extraction.py  test_filters.py  test_scoring.py
